# stm32-cubemx-fixture

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  cubemx_fixture.sh  st-util_singleton_debug.sh  st-util_singleton_debug_semihost.sh  stm32f103c8.ioc
cubemx-generated/: cubemx-generated.ioc
source/: main.cpp
tools/: arm-none-eabi-gdb-semihost  arm-none-eabi-gdb-semihost-enable  arm-none-eabi-gdb-with-log  follow_semihosting_stdout  poll_file_descriptor
